--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 header {
-  height: 100vh;
+  height: 50vh;
   padding-top: 5rem;
   /* overflow: hidden; */
 }
@@ -28,7 +28,7 @@ header {
   gap: 0.8rem;
   position: absolute;
   left: 0;
-  bottom: 3rem;
+  /* bottom: 3rem; */
 }
 
 .header__socials::after {
@@ -58,7 +58,7 @@ header {
 .scroll__down {
   position: absolute;
   right: -2.3rem;
-  bottom: 5rem;
+  /* bottom: 5rem; */
   transform: rotate(90deg);
   font-weight: 300;
   font-size: 0.9rem;
